--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.1",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-player": "^2.10.1",
     "recoil": "^0.7.3-alpha.2",
@@ -26,7 +27,12 @@
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "autoprefixer": "^10.4.0",
+    "eslint": "^8.18.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "patch-package": "^6.4.7",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
